--- a/Iris Flower ML project.ipynb
+++ b/Iris Flower ML project.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ecd6a499",
+   "id": "004db299",
    "metadata": {},
    "source": [
-    "# IRIS  Flower Classification ML Model\n",
+    "# 1. IRIS  Flower Classification ML Model\n",
     "## by- Tamal Majumder\n",
     "* [LINKEDIN](https://www.linkedin.com/in/tamal-majumder-4979781a3/)\n",
     "* [GITHUB](https://github.com/t-majumder)\n",
     "## Explanation:\n",
     "* First we load the dataset we downloaded from UCI machine learning reposetory: [Dataset Link](http://archive.ics.uci.edu/ml/datasets/Iris)\n",
-    "* Then giving suitable column names we describe and analyze the dataset \n",
+    "* Then, we will assign suitable column names to describe and analyze the dataset.\n",
     "* Now we look at the dataset visually \n",
     "    - Frob the plotted curve it is clear that Iris Setosa (Blue curve) is more descrete so it will bw showing more accurate result and will train easily\n",
     "    - Iris Versicolor (Orange curve) and Iris Virginica's (Green curve) data are very close to each other which is visible in the graph. it basically means they look kind of similar to each other.\n",
@@ -19,13 +19,13 @@
     "    * Support Vector Machine Model (96.67 % Accurate)\n",
     "    * Logistic Regression (93.33 % Accurate)\n",
     "    * Decision tree Classifier Model (96.67 % Accurate)\n",
-    "* To finally test the model we give a new dataset as Input and by Looking at the result it is clear that the Model Created is very successful to predict the class of flowers.    "
+    "* Finally, to test the model, we provide a new dataset as input. Looking at the results, it is evident that the created model is highly successful in predicting the class of flowers.    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "94456b5a",
+   "execution_count": 1,
+   "id": "6b140ea6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "7beb3b00",
    "metadata": {},
    "outputs": [
@@ -189,7 +189,7 @@
        "[150 rows x 5 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "3dabc034",
    "metadata": {},
    "outputs": [
@@ -306,7 +306,7 @@
        "max        7.900000     4.400000      6.900000     2.500000"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,17 +325,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "fb47937e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x2d405565cf0>"
+       "<seaborn.axisgrid.PairGrid at 0x1dbf39ff010>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "2e8d2d80",
    "metadata": {},
    "outputs": [],
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "0b4a507b",
    "metadata": {},
    "outputs": [],
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "c622ced7",
    "metadata": {},
    "outputs": [
@@ -402,7 +402,7 @@
        "SVC()"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "b87ca1c6",
    "metadata": {},
    "outputs": [
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "42af6209",
    "metadata": {},
    "outputs": [
@@ -447,33 +447,33 @@
       "Iris-setosa      Iris-setosa\n",
       "Iris-setosa      Iris-setosa\n",
       "Iris-setosa      Iris-setosa\n",
-      "Iris-setosa      Iris-setosa\n",
-      "Iris-setosa      Iris-setosa\n",
-      "Iris-virginica      Iris-virginica\n",
-      "Iris-setosa      Iris-setosa\n",
-      "Iris-setosa      Iris-setosa\n",
-      "Iris-versicolor      Iris-versicolor\n",
-      "Iris-versicolor      Iris-versicolor\n",
-      "Iris-versicolor      Iris-versicolor\n",
-      "Iris-setosa      Iris-setosa\n",
-      "Iris-setosa      Iris-setosa\n",
-      "Iris-versicolor      Iris-versicolor\n",
       "Iris-virginica      Iris-virginica\n",
       "Iris-versicolor      Iris-versicolor\n",
+      "Iris-virginica      Iris-virginica\n",
       "Iris-setosa      Iris-setosa\n",
+      "Iris-versicolor      Iris-versicolor\n",
       "Iris-versicolor      Iris-versicolor\n",
       "Iris-versicolor      Iris-versicolor\n",
       "Iris-virginica      Iris-virginica\n",
       "Iris-setosa      Iris-setosa\n",
       "Iris-virginica      Iris-virginica\n",
-      "Iris-versicolor      Iris-versicolor\n",
-      "Iris-setosa      Iris-setosa\n",
       "Iris-setosa      Iris-setosa\n",
       "Iris-virginica      Iris-virginica\n",
-      "Iris-virginica      Iris-versicolor\n",
+      "Iris-versicolor      Iris-versicolor\n",
       "Iris-versicolor      Iris-versicolor\n",
       "Iris-virginica      Iris-virginica\n",
-      "Iris-versicolor      Iris-versicolor\n"
+      "Iris-virginica      Iris-virginica\n",
+      "Iris-virginica      Iris-virginica\n",
+      "Iris-versicolor      Iris-versicolor\n",
+      "Iris-virginica      Iris-virginica\n",
+      "Iris-versicolor      Iris-versicolor\n",
+      "Iris-versicolor      Iris-versicolor\n",
+      "Iris-versicolor      Iris-virginica\n",
+      "Iris-setosa      Iris-setosa\n",
+      "Iris-virginica      Iris-virginica\n",
+      "Iris-virginica      Iris-virginica\n",
+      "Iris-setosa      Iris-setosa\n",
+      "Iris-setosa      Iris-setosa\n"
      ]
     }
    ],
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1149e88d",
+   "id": "f5853660",
    "metadata": {},
    "source": [
     "## LINEAR REGRASSION MODEL"
@@ -492,24 +492,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "d0047afe",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\987ta\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:458: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -519,13 +505,15 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#LINEAR REGRASSION\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "model_LR=LogisticRegression()\n",
     "model_LR.fit(X_train,Y_train)"
@@ -533,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "52ac5592",
    "metadata": {},
    "outputs": [
@@ -553,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f2956f3",
+   "id": "94973878",
    "metadata": {},
    "source": [
     "## Decision tree Classifier Model"
@@ -561,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "04365b92",
    "metadata": {},
    "outputs": [
@@ -574,7 +562,7 @@
        "DecisionTreeClassifier()"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "854460e7",
    "metadata": {},
    "outputs": [
@@ -607,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "id": "80c7b265",
    "metadata": {},
    "outputs": [
@@ -617,12 +605,12 @@
      "text": [
       "                 precision    recall  f1-score   support\n",
       "\n",
-      "    Iris-setosa       1.00      1.00      1.00        13\n",
+      "    Iris-setosa       1.00      1.00      1.00         9\n",
       "Iris-versicolor       0.90      0.90      0.90        10\n",
-      " Iris-virginica       0.86      0.86      0.86         7\n",
+      " Iris-virginica       0.91      0.91      0.91        11\n",
       "\n",
       "       accuracy                           0.93        30\n",
-      "      macro avg       0.92      0.92      0.92        30\n",
+      "      macro avg       0.94      0.94      0.94        30\n",
       "   weighted avg       0.93      0.93      0.93        30\n",
       "\n"
      ]
@@ -636,7 +624,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b7cdc97",
+   "id": "5fa11a95",
    "metadata": {},
    "source": [
     "## Testing the Model"
@@ -644,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "b1a876c0",
    "metadata": {},
    "outputs": [
@@ -654,7 +642,7 @@
      "text": [
       "Prediction of flower 1 : Iris-setosa\n",
       "Prediction of flower 2 : Iris-versicolor\n",
-      "Prediction of flower 3 : Iris-versicolor\n",
+      "Prediction of flower 3 : Iris-virginica\n",
       "Prediction of flower 4 : Iris-setosa\n",
       "Prediction of flower 5 : Iris-versicolor\n"
      ]
@@ -667,14 +655,6 @@
     "for i in range (len(X_newtest)):\n",
     "    print('Prediction of flower',i+1,':',prediction[i])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1a16688b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
