--- a/Iris Flower ML project.ipynb
+++ b/Iris Flower ML project.ipynb
@@ -17,8 +17,8 @@
     "    - Iris Versicolor (Orange curve) and Iris Virginica's (Green curve) data are very close to each other which is visible in the graph. it basically means they look kind of similar to each other.\n",
     "* Now in the next step we train the model. We used 3 different tyoe of models to compare the accuracy. The Results Were:\n",
     "    * Support Vector Machine Model (96.67 % Accurate)\n",
-    "    * Logistic Regression (93.33 % Accurate)\n",
-    "    * Decision tree Classifier Model (96.67 % Accurate)\n",
+    "    * Logistic Regression (96.67 % Accurate)\n",
+    "    * Decision tree Classifier Model (93.33 % Accurate)\n",
     "* Finally, to test the model, we provide a new dataset as input. Looking at the results, it is evident that the created model is highly successful in predicting the class of flowers.    "
    ]
   },
@@ -332,7 +332,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1dbf39ff010>"
+       "<seaborn.axisgrid.PairGrid at 0x24be90ee170>"
       ]
      },
      "execution_count": 4,
@@ -444,19 +444,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iris-setosa      Iris-setosa\n",
-      "Iris-setosa      Iris-setosa\n",
-      "Iris-setosa      Iris-setosa\n",
-      "Iris-virginica      Iris-virginica\n",
-      "Iris-versicolor      Iris-versicolor\n",
-      "Iris-virginica      Iris-virginica\n",
-      "Iris-setosa      Iris-setosa\n",
-      "Iris-versicolor      Iris-versicolor\n",
-      "Iris-versicolor      Iris-versicolor\n",
-      "Iris-versicolor      Iris-versicolor\n",
       "Iris-virginica      Iris-virginica\n",
       "Iris-setosa      Iris-setosa\n",
       "Iris-virginica      Iris-virginica\n",
+      "Iris-versicolor      Iris-versicolor\n",
       "Iris-setosa      Iris-setosa\n",
       "Iris-virginica      Iris-virginica\n",
       "Iris-versicolor      Iris-versicolor\n",
@@ -464,15 +455,24 @@
       "Iris-virginica      Iris-virginica\n",
       "Iris-virginica      Iris-virginica\n",
       "Iris-virginica      Iris-virginica\n",
+      "Iris-setosa      Iris-setosa\n",
       "Iris-versicolor      Iris-versicolor\n",
+      "Iris-setosa      Iris-setosa\n",
       "Iris-virginica      Iris-virginica\n",
-      "Iris-versicolor      Iris-versicolor\n",
-      "Iris-versicolor      Iris-versicolor\n",
+      "Iris-setosa      Iris-setosa\n",
+      "Iris-virginica      Iris-virginica\n",
+      "Iris-setosa      Iris-setosa\n",
+      "Iris-setosa      Iris-setosa\n",
+      "Iris-setosa      Iris-setosa\n",
+      "Iris-setosa      Iris-setosa\n",
       "Iris-versicolor      Iris-virginica\n",
       "Iris-setosa      Iris-setosa\n",
+      "Iris-setosa      Iris-setosa\n",
       "Iris-virginica      Iris-virginica\n",
       "Iris-virginica      Iris-virginica\n",
       "Iris-setosa      Iris-setosa\n",
+      "Iris-setosa      Iris-setosa\n",
+      "Iris-virginica      Iris-virginica\n",
       "Iris-setosa      Iris-setosa\n"
      ]
     }
@@ -549,20 +549,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "04365b92",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<style>#sk-container-id-3 {color: black;background-color: white;}#sk-container-id-3 pre{padding: 0;}#sk-container-id-3 div.sk-toggleable {background-color: white;}#sk-container-id-3 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-3 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-3 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-3 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-3 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-3 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-3 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-3 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-3 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-3 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-3 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-3 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-3 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-3 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-3 div.sk-item {position: relative;z-index: 1;}#sk-container-id-3 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-3 div.sk-item::before, #sk-container-id-3 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-3 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-3 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-3 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-3 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-3 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-3 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-3 div.sk-label-container {text-align: center;}#sk-container-id-3 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-3 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-3\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>DecisionTreeClassifier()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" checked><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">DecisionTreeClassifier</label><div class=\"sk-toggleable__content\"><pre>DecisionTreeClassifier()</pre></div></div></div></div></div>"
+       "<style>#sk-container-id-6 {color: black;background-color: white;}#sk-container-id-6 pre{padding: 0;}#sk-container-id-6 div.sk-toggleable {background-color: white;}#sk-container-id-6 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-6 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-6 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-6 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-6 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-6 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-6 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-6 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-6 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-6 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-6 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-6 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-6 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-6 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-6 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-6 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-6 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-6 div.sk-item {position: relative;z-index: 1;}#sk-container-id-6 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-6 div.sk-item::before, #sk-container-id-6 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-6 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-6 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-6 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-6 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-6 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-6 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-6 div.sk-label-container {text-align: center;}#sk-container-id-6 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-6 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-6\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>DecisionTreeClassifier()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-6\" type=\"checkbox\" checked><label for=\"sk-estimator-id-6\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">DecisionTreeClassifier</label><div class=\"sk-toggleable__content\"><pre>DecisionTreeClassifier()</pre></div></div></div></div></div>"
       ],
       "text/plain": [
        "DecisionTreeClassifier()"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "854460e7",
    "metadata": {},
    "outputs": [
@@ -583,19 +583,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The Accuracy of Linear Regrassion Model is:  93.33333333333333\n"
+      "The Accuracy of Decision tree Classifier Model is:  93.33333333333333\n"
      ]
     }
    ],
    "source": [
     "prediction3=model_DTC.predict(X_test)\n",
     "from sklearn.metrics import accuracy_score\n",
-    "print(\"The Accuracy of Linear Regrassion Model is: \", accuracy_score(Y_test,prediction3)*100)"
+    "print(\"The Accuracy of Decision tree Classifier Model is: \", accuracy_score(Y_test,prediction3)*100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "80c7b265",
    "metadata": {},
    "outputs": [
@@ -605,12 +605,12 @@
      "text": [
       "                 precision    recall  f1-score   support\n",
       "\n",
-      "    Iris-setosa       1.00      1.00      1.00         9\n",
-      "Iris-versicolor       0.90      0.90      0.90        10\n",
+      "    Iris-setosa       1.00      1.00      1.00        14\n",
+      "Iris-versicolor       0.80      0.80      0.80         5\n",
       " Iris-virginica       0.91      0.91      0.91        11\n",
       "\n",
       "       accuracy                           0.93        30\n",
-      "      macro avg       0.94      0.94      0.94        30\n",
+      "      macro avg       0.90      0.90      0.90        30\n",
       "   weighted avg       0.93      0.93      0.93        30\n",
       "\n"
      ]
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "id": "b1a876c0",
    "metadata": {},
    "outputs": [
@@ -642,7 +642,7 @@
      "text": [
       "Prediction of flower 1 : Iris-setosa\n",
       "Prediction of flower 2 : Iris-versicolor\n",
-      "Prediction of flower 3 : Iris-virginica\n",
+      "Prediction of flower 3 : Iris-versicolor\n",
       "Prediction of flower 4 : Iris-setosa\n",
       "Prediction of flower 5 : Iris-versicolor\n"
      ]
