--- a/Iris Flower ML project.ipynb
+++ b/Iris Flower ML project.ipynb
@@ -5,7 +5,7 @@
    "id": "004db299",
    "metadata": {},
    "source": [
-    "# 1. IRIS  Flower Classification ML Model\n",
+    "# IRIS  Flower Classification ML Model\n",
     "## by- Tamal Majumder\n",
     "* [LINKEDIN](https://www.linkedin.com/in/tamal-majumder-4979781a3/)\n",
     "* [GITHUB](https://github.com/t-majumder)\n",
